Fix for alignment of dossiers.
git-svn-id: svn://svn.totalactivemedia.nl/beeldgeluid@18966 a5e0a7a9-93bf-8f48-8ca9-7e8460674ce7

--- a/sites/all/modules/gridui/css/gridui.css
+++ b/sites/all/modules/gridui/css/gridui.css
@@ -3,7 +3,7 @@
   float: left;
   height: 320px;
   margin: 28px 0 0 35px;
-  width: 540px;
+  width: 600px;
   background-color: #ccc;
   background-image: url('/sites/all/modules/gridui/img/gridui-grid.gif');
   background-position: top left;
